# webServer_baseseacoks

./: CMakeLists.txt  MYREADME  README.md
src/app/c/: CMakeLists.txt  getlidarc16.cpp  ws_test.cpp
src/app/c/include/: getlidarc16.h
src/main/c/: Server.cpp
src/main/c/seasocks/: Connection.h  Server.h
src/ws_test_web/: app.js  calibrate_lidar_GB.html  main.html  main2.html  monitor.html
